--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "Monke App Backend",
   "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "start": "nodemon server.js"
   },
   "author": "Faiz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.1301.0",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
+  }
 }
